--- a/template/css/style.css
+++ b/template/css/style.css
@@ -5,6 +5,10 @@
     box-sizing: border-box;
     font-family: Arial, sans-serif;
 }
+body{
+    width: 100%;
+    height: 100%;
+}
 
 .header {
     background-color: #ffffff;
@@ -14,6 +18,13 @@
     width: 100%;
     top: 0;
     z-index: 1000;
+    height: 80px;
+    
+}
+.main-content {
+    margin-top: 80px; 
+    min-height: calc(100vh - 80px);
+    padding: 20px;
 }
 
 .nav-container {
